test/log/store/vstcb3in0_v_i64.txt
vstcb3in0_v_i64.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vstcb3in0_v_i64.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vstcb3in0_v_i64.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vstcb3in0_v_i64.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vstcb3in0_v_i64.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vstcb3in0_v_i64.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vstcb3in0_v_i64.c:29:6: warning: no previous prototype for 'vstcb3in0_v_i64_golden' [-Wmissing-prototypes]
   29 | void vstcb3in0_v_i64_golden(int64_t base[],int64_t *value,uint32_t imm,void *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vstcb3in0_v_i64.c: In function 'vstcb3in0_v_i64_golden':
vstcb3in0_v_i64.c:31:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   31 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vstcb3in0_v_i64.c:31:1: note: each undeclared identifier is reported only once for each function it appears in
vstcb3in0_v_i64.c:31:9: error: expected ';' before 'Line'
   31 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vstcb3in0_v_i64.c:29:37: warning: unused parameter 'base' [-Wunused-parameter]
   29 | void vstcb3in0_v_i64_golden(int64_t base[],int64_t *value,uint32_t imm,void *exp_result) {
      |                             ~~~~~~~~^~~~~~
vstcb3in0_v_i64.c:29:53: warning: unused parameter 'value' [-Wunused-parameter]
   29 | void vstcb3in0_v_i64_golden(int64_t base[],int64_t *value,uint32_t imm,void *exp_result) {
      |                                            ~~~~~~~~~^~~~~
vstcb3in0_v_i64.c:29:68: warning: unused parameter 'imm' [-Wunused-parameter]
   29 | void vstcb3in0_v_i64_golden(int64_t base[],int64_t *value,uint32_t imm,void *exp_result) {
      |                                                           ~~~~~~~~~^~~
vstcb3in0_v_i64.c:29:78: warning: unused parameter 'exp_result' [-Wunused-parameter]
   29 | void vstcb3in0_v_i64_golden(int64_t base[],int64_t *value,uint32_t imm,void *exp_result) {
      |                                                                        ~~~~~~^~~~~~~~~~
vstcb3in0_v_i64.c: In function 'main':
vstcb3in0_v_i64.c:22:15: error: subscripted value is neither array nor pointer nor vector
   22 |              a[i] = random(threshold); \
      |               ^
vstcb3in0_v_i64.c:46:5: note: in expansion of macro 'data_init'
   46 |     data_init(value, exp_value, 8*3, 0xffffffffffffffff);
      |     ^~~~~~~~~
vstcb3in0_v_i64.c:23:22: error: subscripted value is neither array nor pointer nor vector
   23 |              b[i] = a[i]; \
      |                      ^
vstcb3in0_v_i64.c:46:5: note: in expansion of macro 'data_init'
   46 |     data_init(value, exp_value, 8*3, 0xffffffffffffffff);
      |     ^~~~~~~~~
vstcb3in0_v_i64.c:56:55: error: 'exp_result' undeclared (first use in this function)
   56 |     vstcb3in0_v_i64_golden(exp_base,exp_value,exp_imm,exp_result);
      |                                                       ^~~~~~~~~~
vstcb3in0_v_i64.c:62:9: error: 'i' undeclared (first use in this function)
   62 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
vstcb3in0_v_i64.c:39:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   39 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vstcb3in0_v_i64.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vstcb3in0_v_i64"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vstcb3in0_v_i64.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vstcb3in0_v_i64.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed